--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,32 @@
-name: Deploy to server
+name: Deploy Django to Server
 
 on:
   push:
-    branches:
-      - master  # Кожен раз, коли є зміни в гілці master
+    branches: [ master ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out the code
-        uses: actions/checkout@v3  # Викачує код з репозиторію
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up SSH key
-        uses: webfactory/ssh-agent@v0.5.3  # Налаштовує SSH агент
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}  # Використовує твій ключ з GitHub Secrets
-
-      - name: Deploy to server
+      - name: Setup SSH
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@3.71.86.119 "cd /home/ubuntu/serviceLviv && git pull && systemctl restart gunicorn && systemctl restart nginx"
-        # Підключається до сервера і виконує команди: git pull для отримання нових змін та перезапускає gunicorn і nginx
- 
+          mkdir -p ~/.ssh/
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+
+      - name: Deploy to Server
+        run: |
+          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+            cd ${{ secrets.SERVER_PATH }}
+            git fetch origin
+            git reset --hard origin/master
+            pip install -r requirements.txt
+            python manage.py migrate
+            sudo systemctl restart gunicorn
+            sudo systemctl restart nginx
+          EOF 
