--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
             cd ${{ secrets.SERVER_PATH }}
             git fetch origin
             git reset --hard origin/master
-            pip install -r requirements.txt
-            python manage.py migrate
+            pip3 install -r requirements.txt
+            python3 manage.py migrate
             sudo systemctl restart gunicorn
             sudo systemctl restart nginx
-          EOF 
+          EOF
