--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,12 @@ jobs:
 
       - name: Setup SSH
         run: |
-          mkdir -p ~/.ssh/
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+          mkdir -p "$HOME/.ssh"
+          chmod 700 "$HOME/.ssh"
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > "$HOME/.ssh/id_rsa"
+          chmod 600 "$HOME/.ssh/id_rsa"
+          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> "$HOME/.ssh/known_hosts"
+
 
       - name: Deploy to Server
         run: |
@@ -29,4 +31,5 @@ jobs:
             python3 manage.py migrate
             sudo systemctl restart gunicorn
             sudo systemctl restart nginx
+
           EOF
