--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,10 @@ jobs:
 
       - name: Deploy to Server
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-            cd ${{ secrets.SERVER_PATH }}
-            git fetch origin
-            git reset --hard origin/master
-            pip3 install -r requirements.txt
-            python3 manage.py migrate --noinput
-            sudo systemctl restart gunicorn
-            sudo systemctl restart nginx
-          EOF
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "cd ${{ secrets.SERVER_PATH }} && \
+          git fetch origin && \
+          git reset --hard origin/master && \
+          pip3 install -r requirements.txt && \
+          python3 manage.py migrate --noinput && \
+          sudo systemctl restart gunicorn && \
+          sudo systemctl restart nginx"
