--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,29 +12,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Debug HOME
-        run: |
-          echo "Current HOME: $HOME"
-          ls -la $HOME
-          mkdir -p $HOME/.ssh
-          chmod 700 $HOME/.ssh
-          ls -la $HOME/.ssh
-
       - name: Setup SSH
         run: |
-          mkdir -p $HOME/.ssh
-          chmod 700 $HOME/.ssh
-          printf "%s\n" "${{ secrets.SSH_PRIVATE_KEY }}" > $HOME/.ssh/id_rsa
-          chmod 600 $HOME/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> $HOME/.ssh/known_hosts
-          echo "SSH setup done."
+          mkdir -p ~/.ssh/
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
 
       - name: Deploy to Server
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "cd ${{ secrets.SERVER_PATH }} && \
-          git fetch origin && \
-          git reset --hard origin/master && \
-          pip3 install -r requirements.txt && \
-          python3 manage.py migrate --noinput && \
-          sudo systemctl restart gunicorn && \
-          sudo systemctl restart nginx"
+          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+            cd ${{ secrets.SERVER_PATH }}
+            git fetch origin
+            git reset --hard origin/master
+            pip3 install -r requirements.txt
+            python3 manage.py migrate
+            sudo systemctl restart gunicorn
+            sudo systemctl restart nginx
+
+          EOF
